# p2p-chat

./: .gitignore  CMakeLists.txt  Makefile  README.md  p2p_chat.cpp  rendezvous_server.cpp
.github/workflows/: windows-build.yml
common/: crypto.hpp  framing.hpp  identity.hpp  json.hpp  profile_store.hpp  upnp.hpp  util.hpp
docs/: video.md
gui/: AudioSettingsDialog.cpp  AudioSettingsDialog.hpp  ChatBackend.cpp  ChatBackend.hpp  MainWindow.cpp  MainWindow.hpp  Profile.cpp  Profile.hpp  ProfileLoginDialog.cpp  ProfileLoginDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  main.cpp  resources.qrc
smoke/: udp_smoke.cpp
src/video/: v4l2_caps.cpp  v4l2_caps.h  v4l2_capture.cpp  v4l2_capture.h  video_codec.cpp  video_codec.h  video_packetizer.cpp  video_packetizer.h  x11_shm_capture.cpp  x11_shm_capture.h
tests/: video_packetizer_smoke.cpp
tools/: v4l2_dump_modes.cpp
